# slambook2

ch1/: note.md
ch12/: note.md
ch12/dense_RGBD/: CMakeLists.txt  surfel_mapping.cpp
ch12/dense_mono/: CMakeLists.txt  dense_mapping.cpp
ch2/: ch2.bib  note.md
ch3/: CMakeLists.txt  note.md
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: eigenGeometry.cpp
ch3/visualizeGeometry/: CMakeLists.txt
ch4/: PKGBUILD  note.md  useSophus.cpp
ch4/example/: CMakeLists.txt
ch5/: note.md
ch6/: note.md
ch7/: CMakeLists.txt  note.md  orb_cv.cpp  orb_self.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangulation.cpp
